--- a/waifu-time/src/components/UI/AnimeContainer.module.css
+++ b/waifu-time/src/components/UI/AnimeContainer.module.css
@@ -1,7 +1,7 @@
 .box {
-  max-width: 10vw;
-  min-width: 100px;
-  min-height: 300px;
+  width: 170px;
+
+  height: auto;
   padding: 5px;
   margin: 5px;
   border-radius: 2%;
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  color: black;
 }
 
 .box:hover {
@@ -20,4 +21,5 @@
 img {
   width: 100%;
   height: auto;
+  flex: 1 0 0;
 }
