Add redirect to video player once download starts, add toggle for dark mode

--- a/waifu-time/src/components/ShowInfo.module.css
+++ b/waifu-time/src/components/ShowInfo.module.css
@@ -1,11 +1,13 @@
 .container {
-  width: 60%;
-  margin: 90px auto;
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 90px;
 }
 
 .infoContainer {
   display: flex;
-  text-align: justify;
+  justify-content: center;
+  align-items: flex-start;
   font-size: 1.1em;
 }
 
@@ -18,6 +20,29 @@
   width: 75%;
 }
 
+.title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.description {
+  padding: 20px;
+  text-align: justify;
+}
+
 .showInfoImg {
   width: 257px;
+}
+
+.episodesContainer {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.episode {
+  margin: 2px;
 }
