--- a/waifu-time/src/App.css
+++ b/waifu-time/src/App.css
@@ -3,6 +3,39 @@
   z-index: 999;
 }
 
+html {
+  transition: 2s;
+}
+
+:root {
+  --primary-color: #302ae6;
+  --secondary-color: #536390;
+  --font-color: #424242;
+  --bg-color: #f5f5f5;
+  --heading-color: #292922;
+  --shadow-color: #8e8e8e;
+  --box-color: white;
+}
+
+[data-theme='dark'] {
+  --primary-color: #9a97f3;
+  --secondary-color: #818cab;
+  --font-color: #e1e1ff;
+  --bg-color: #171717;
+  --heading-color: #818cab;
+  --shadow-color: black;
+  --box-color: #1a1a1a;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--font-color);
+}
+
+h1 {
+  color: var(--secondary-color);
+}
+
 .App {
   text-align: center;
   margin-top: 65px;
