--- a/waifu-time/src/Renderer.module.css
+++ b/waifu-time/src/Renderer.module.css
@@ -7,8 +7,15 @@ body,
 .container {
   display: flex;
   flex-direction: column;
-  height: 90vh;
+  height: 93.2vh;
 }
+
+.controlsContainer {
+  position: absolute;
+  width: 100vw;
+  bottom: 20px;
+}
+
 .player {
   flex: 1;
   min-height: 0;
@@ -16,9 +23,12 @@ body,
 .controls {
   display: flex;
   height: 40px;
+  margin: 0 10px 0 10px;
+  opacity: 1;
+  transform: 0.3s;
 }
 .control {
-  width: 50px;
+  width: 45px;
   height: 40px;
   font-size: 23px;
   border: none;
@@ -33,8 +43,14 @@ body,
 .control:hover {
   background: #e3ddd8;
 }
+
+.controls:hover {
+  opacity: 1;
+}
+
 .seek {
   flex: 1;
+  position: relative;
   height: 40px;
   margin: 0;
   cursor: pointer;
