--- a/waifu-time/src/components/MainPage.module.css
+++ b/waifu-time/src/components/MainPage.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 80%;
+  width: 1100px;
   margin: 0 auto;
 }
 
@@ -11,7 +11,12 @@
   height: 20px;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+
+.pagination p {
+  font-size: 1.1rem;
 }
 
 @media (max-width: 900px) {
