--- a/waifu-time/src/components/ShowInfo.module.css
+++ b/waifu-time/src/components/ShowInfo.module.css
@@ -33,16 +33,17 @@
 
 .showInfoImg {
   width: 257px;
+  filter: drop-shadow(0px 0px 10px var(--shadow-color));
 }
 
 .episodesContainer {
-  width: 90%;
+  max-width: 1300px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .episode {
-  margin: 2px;
+  margin: 5px;
 }
