--- a/waifu-time/src/components/UI/AnimeContainer.module.css
+++ b/waifu-time/src/components/UI/AnimeContainer.module.css
@@ -1,11 +1,9 @@
 .box {
   width: 170px;
-  height: auto;
+  height: 300px;
   padding: 5px;
-  margin: 5px;
-  background-color: var(--box-color);
+  margin: 10px 10px 40px 10px;
   border-radius: 2%;
-  box-shadow: 0 0 15px var(--shadow-color);
   transition: 0.1s;
   display: flex;
   flex-direction: column;
@@ -14,13 +12,23 @@
 }
 
 .box:hover {
+}
+
+.image {
+  width: 100%;
+  height: 256px;
+  flex: 1 0 0;
+  filter: drop-shadow(0px 0px 10px var(--shadow-color));
+  object-fit: cover;
+  object-position: center;
+}
+
+.image:hover {
   cursor: pointer;
-  box-shadow: 0 0 15px var(--shadow-color);
   transform: scale(1.05);
 }
 
-img {
-  width: 100%;
-  height: auto;
-  flex: 1 0 0;
+.seriesName {
+  text-align: justify;
+  font-size: 0.9rem;
 }
