--- a/waifu-time/src/Renderer.module.css
+++ b/waifu-time/src/Renderer.module.css
@@ -7,13 +7,26 @@ body,
 .container {
   display: flex;
   flex-direction: column;
+  position: relative;
+  top: -27px;
   height: 93.2vh;
+  justify-content: flex-start;
 }
 
 .controlsContainer {
   position: absolute;
-  width: 10vw;
-  bottom: 20px;
+  left: 1vw;
+  bottom: 30px;
+  width: 98vw;
+  background: var(--side-bar-color);
+  border-radius: 10px;
+  opacity: 0.9;
+  transition: ease-in-out 0.4s;
+}
+
+.controlsContainerHidden {
+  bottom: 0px;
+  opacity: 0;
 }
 
 .player {
@@ -22,10 +35,12 @@ body,
 }
 .controls {
   display: flex;
-  height: 40px;
+  height: 45px;
   margin: 0 10px 0 10px;
   opacity: 1;
   transform: 0.3s;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .control {
   width: 45px;
@@ -34,14 +49,23 @@ body,
   border: none;
   outline: none;
   cursor: pointer;
-  background: #fff;
-  margin-right: 5px;
+  background: transparent;
+  color: #858585;
+  opacity: 1;
+  margin: 0 5px 0 5px;
 }
+
+.control:first-child {
+  margin-left: 0;
+}
+
 .control:last-child {
-  margin: 0 0 0 5px;
+  margin-right: 0;
 }
+
 .control:hover {
-  background: #e3ddd8;
+  background: #302e2d;
+  border-radius: 5px;
 }
 
 .controls:hover {
@@ -51,8 +75,34 @@ body,
 .seek {
   flex: 1;
   position: relative;
-  height: 40px;
+
   margin: 0;
   cursor: pointer;
   outline: none;
+  -webkit-appearance: none;
+  border-radius: 5px;
+  height: 5px;
+  padding: 0;
+}
+
+::-webkit-slider-thumb {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #2c3e50;
+  cursor: pointer;
+}
+
+::-webkit-slider-thumb:hover {
+  background: var(--primary-color);
+}
+
+:-moz-range-thumb {
+  background: var(--primary-color);
+}
+
+::-webkit-slider-thumb:focus {
+  box-shadow: 0 0 0 3px #fff, 0 0 0 6px #1abc9c;
 }
