--- a/waifu-time/src/Renderer.module.css
+++ b/waifu-time/src/Renderer.module.css
@@ -20,18 +20,14 @@ body,
   width: 98vw;
   background: var(--side-bar-color);
   border-radius: 10px;
-  opacity: 0.7;
+  opacity: 0.8;
   transition: ease-in-out 0.4s;
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(10px);
 }
 
 .controlsContainerHidden {
   bottom: 0px;
   opacity: 0;
-}
-
-.blur {
-  filter: blur(10px);
 }
 
 .player {
@@ -45,7 +41,6 @@ body,
   opacity: 1;
   transform: 0.3s;
   align-items: center;
-  filter: blur(10px);
   justify-content: space-evenly;
 }
 .control {
@@ -56,7 +51,7 @@ body,
   outline: none;
   cursor: pointer;
   background: transparent;
-  color: #858585;
+  color: #c8bfbf;
   opacity: 1;
   margin: 0 5px 0 5px;
 }
